add 3 more files

--- a/nabeel.html
+++ b/nabeel.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    it is a index file
+    <b> file name is nabeel</b>
+    dddfdff
 </body>
 </html>
